sast/sonarqube/k8s/sonar-namespace.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: sonarqube 
  labels:
    name: sonarqube
