sast/sonarqube/k8s/sonar-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarqube-deploy
  namespace: 
  labels:
    app: sonarqube 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarqube 
  template:
    metadata:
      labels:
        app: sonarqube 
    spec:
      containers:
      - name: sonarqube 
        image: quay.io/rootshifty/sonarqube:release
      volumeMounts:
       - mountPath: /opt/sonarqube/data
         name: sonarqube-data
       - mountPath: /opt/sonarqube/extensions
         name: sonarqube-extensions        
       - mountPath: /opt/sonarqube/logs
         name: sonarqube-logs         
       - mountPath: /opt/sonarqube/temp
         name: sonarqube-temp          
      ports:
        - containerPort: 9000
      resources:
          limits:
            cpu: 1000m
            memory: 512M
          requests:
            cpu: 50m
            memory: 256M
volumeClaimTemplates:
 - metadata:
     name: sonarqube-volume
   spec:
     storageClassName: sonarqube-volume
     accessModes: [ "ReadWriteOnce" ]
     resources:
       requests:
         storage: 120Gi
