sast/sonarqube/k8s/sonar-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube-service
  namespace: sonarqube 
spec:
  selector:
    app: sonarqube 
  type: LoadBalancer
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
    - name: http
      protocol: TCP
      port: 80 
      targetPort: 9000
